# antidote

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  package.json  tsconfig.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-report.md  feature-request.md
modules/: README.md  license-banner.txt
modules/core/: BUILD  README.md  package.json
modules/core/src/: di.ts  index.ts  injector.spec.ts
modules/testing/: BUILD  README.md  package.json  tsconfig-build.json
modules/testing/src/: index.ts  provide_auto_mock.spec.ts  provide_auto_mock.ts
tools/: bazel.rc  defaults.bzl
